Moved usage printing into a separate UsageWriter class